# gandiva

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  build.py  installer.iss  pyproject.toml
.superpowers/brainstorm/171053-1773852542/: .server-stopped  layout-overview.html  waiting.html
.superpowers/brainstorm/17732-1773678821/: .server-stopped  demo-capabilities.html  scene-architecture.html
docs/: gandiva-macos-pyqt6-remove-error.md  nuitka-build.md  renderer-arch.md
docs/superpowers/plans/: 2026-03-16-renderer-migration-phase1.md  2026-03-16-renderer-migration-phase2.md  2026-03-16-renderer-migration-phase3.md  2026-03-18-multi-view-vargas-yogas.md
docs/superpowers/specs/: 2026-03-16-chart-scene-architecture-design.md  2026-03-18-multi-view-vargas-yogas-design.md
experiments/: bent_bodygraph.py  svg_traced_bodygraph.py
gandiva/: app.py  glyph_renderer.py  glyphs.py  main_window.py  themes.py
gandiva/assets/: __init__.py  gandiva-icon.icns
gandiva/info_widgets/: __init__.py  base.py  dasha.py  dignity.py  mini_varga.py  nakshatra_dasha.py  panchanga.py
gandiva/overlays/: __init__.py  aspect_lines.py  base.py  rashi_aspects.py
gandiva/renderers/: __init__.py  base.py  south_indian.py  western_wheel.py
gandiva/scene/: __init__.py  chart_scene.py  chart_view.py
gandiva/widgets/: chart_area.py  chart_input.py  chart_panel.py  chart_wheel.py  data_panels.py  jaimini_indicators.py  jaimini_panel.py  left_panel.py  planet_table.py  vargas_dock.py  yogas_dock.py
lagui/: app.py  main_window.py
lagui/widgets/: chart_input.py  planet_table.py
