[project]
name = "gandiva"
version = "0.1.0"
description = "PySide6 desktop GUI for libaditya"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Ninth House Studios, LLC", email = "josh@ninthhouse.studio" },
]
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
    "libaditya>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
libaditya = { path = "../libaditya" }
gandiva = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[tool.nuitka]
mode = "standalone"
output-dir = "build"
enable-plugins = ["pyside6"]
include-qt-plugins = "sensible"
include-package = ["libaditya"]
include-package-data = ["libaditya", "gandiva"]
follow-imports = true
nofollow-import-to = ["tkinter", "unittest", "test", "setuptools", "pip", "distutils"]

[dependency-groups]
dev = [
    "gandiva",
]
